Changes for JDK25/Windows