@@ -29,6 +29,7 @@ if ($Global:JUST_EXIT -eq "true") {
 # Run the Java command
 #
 Set-Variable -Name JAVA_ARGS -Value @(
+    "--enable-native-access=javafx.graphics",
     "--module-path",
     """$MODPATH""",
     "-m",
